# personal-hedge-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  config.yaml  pyproject.toml  run_analysis.py  run_dashboard.py  run_data.py  run_execution.py  run_paper_autopilot.py  run_portfolio.py  run_reporting.py  run_risk_check.py  run_scoring.py
.streamlit/: secrets.example.toml
analysis/: __init__.py  _analyzer_base.py  api_client.py  cache.py  combined_score.py  cost_tracker.py  earnings_analyzer.py  filing_analyzer.py  insider_analyzer.py  report_generator.py  risk_analyzer.py  sector_analysis.py
autopilot/: __init__.py  runner.py  state.py
backend/: Dockerfile  requirements.txt
common/: __init__.py  cli.py  config.py  dataframe.py  db.py  logging.py
dashboard/: __init__.py  app.py
data/: __init__.py  earnings_calendar.py  estimates.py  fundamentals.py  institutional.py  market_data.py  providers.py  sec_data.py  short_interest.py  transcripts.py  universe.py
execution/: __init__.py  broker.py  costs.py  executor.py  order_manager.py  short_check.py
factors/: __init__.py  common.py  composite.py  crowding.py  growth.py  inputs.py  insider.py  institutional.py  momentum.py  quality.py  regime_weights.py  revisions.py  short_interest.py  value.py
frontend/: .env.production  Dockerfile  package-lock.json  package.json  tailwind.config.ts
ls_equity_fund/: __init__.py  cli.py
ops/: check_paper_autopilot.ps1  docker-entrypoint.sh  install_paper_autopilot_task.ps1  run_paper_autopilot_loop.ps1
(+103 files in other folders)
